# django-passkey-demo

./: .pre-commit-config.yaml  pyproject.toml  tox.ini
.github/workflows/: tox.yml
demo/: settings.py  urls.py
passkeys/: apps.py
tests/: settings.py  test_my_app.py
