[tool.poetry]
name = "my-app"
version = "0.1.0"
description = "Project template for Django app, using Poetry."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/poetry-template"
repository = "https://github.com/yunojuno/poetry-template"
documentation = "https://github.com/yunojuno/poetry-template"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
]
packages = [{ include = "passkeys" }]

[tool.poetry.dependencies]
# injected into runtime.txt so must be exact
python = "3.11.4"
django = "^4.0"
dj-database-url = "*"
gunicorn = "*"
psycopg2 = "*"
py-webauthn = "*"
whitenoise = "*"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
freezegun = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
tox = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
